Fix import statement spacing

--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -249,11 +249,6 @@ body .ddoc {
       @apply link;
     }
 
-    pre.highlight > code:first-child {
-      @apply pr-9;
-      display: flex;
-    }
-
     pre.highlight .context_button {
       @apply right-0 border-r-4 border-white hover:bg-jsr-cyan-50;
     }
@@ -264,6 +259,20 @@ body .ddoc {
 
     .highlight .lineNumbers {
       @apply mr-3 !important;
+    }
+  }
+
+  .usageContent pre.highlight > code:first-child {
+    @apply pr-9;
+    display: flex;
+
+    * {
+      margin-left: 0.5rem;
+    }
+
+    span:first-child,
+    span:nth-child(4) {
+      margin-left: 0;
     }
   }
 
